2002-05-16  Jody Goldberg <jody@gnome.org>

	* capplet-dir-view.c (capplet_dir_view_init) : pass a slightly more
	  realistic path.
	(help_menu_cb) : new.

	* gnomecc-ui.xml : Add some help content.

2002-03-19  Lauris Kaplinski  <lauris@ximian.com>

	* capplet-dir.c (find_icon): Do not do nasty things with NULL

2002-03-12  Richard Hestilow  <hestilow@ximian.com>

	* capplet-dir-view.h: Move CappletDirViewLayout enum here,
	remove include to preferences.h.

	* Makefile.am: Remove preferences.h again.

2002-03-12  jacob berkman  <jacob@ximian.com>

	* capplet-dir-view.c (prefs_menu_cb): comment this out as it makes
	a call into preferences.c

	* Makefile.am (gnome2_control_center_SOURCES): add preferences.h
	back as files depend on it

2002-03-11  Richard Hestilow  <hestilow@ximian.com>
	
	* capplet-dir-view.c: Remove barely-used libglade stuff, replace
	with BonoboWindow. Add a menu with "close" since this is needed
	for accessibility.

	* gnomecc-ui.xml: Added.

	* Makefile.am: Remove preferences.[ch] from the build. Remove
	libglade stuff. Install gnomecc-ui.xml. 

	* capplet-dir-view-list.c: Remove any "//" comments.

2002-03-05  jacob berkman  <jacob@ximian.com>

	* Makefile.am: clean up; remove some duplicate / obsolete paths
	and bogus INCLUDE path

2002-02-28  Zbigniew Chyla  <cyba@gnome.pl>

	* capplet-dir.c (capplet_new, capplet_dir_new):
	s/gnome_desktop_item_get_string/gnome_desktop_item_get_localestring
	(use translated version of GNOME_DESKTOP_ITEM_NAME).

2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* main.c: s/PACKAGE/GETTEXT_PACKAGE/g
	
2002-02-20  Lauris Kaplinski  <lauris@ximian.com>

	* Makefile.am: Removed extra '\' from the end of
	commented out line, which was causing problems with
	some make/autoconf/automake combinations

2002-02-14  Lauris Kaplinski  <lauris@ximian.com>

	* preferences.c (gnomecc_preferences_get): Public method to
	get pointer of static preferences object

	* main.c (gnome_cc_save_yourself): Session signal handler