@@ -1,3 +1,7 @@
+2002-05-21  Abel Cheung  <maddog@linux.org.hk>
+
+	* capplet-dir-view.c (about_menu_cb): Add translator credits.
+
 2002-05-16  Jody Goldberg <jody@gnome.org>
 
 	* capplet-dir-view.c (capplet_dir_view_init) : pass a slightly more
